[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://CoinCounter.gd" type="Script" id=2]

[node name="UI" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sliders" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 262.0
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="CanvasLayer/Sliders"]
margin_right = 262.0
margin_bottom = 31.0
text = "
Hook gravity"

[node name="Hook Gravity" type="HSlider" parent="CanvasLayer/Sliders"]
margin_top = 35.0
margin_right = 262.0
margin_bottom = 51.0
max_value = 0.1
step = 0.001
value = 0.02
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Sliders"]
margin_top = 55.0
margin_right = 262.0
margin_bottom = 69.0
text = "Hook Speed"

[node name="Hook Speed" type="HSlider" parent="CanvasLayer/Sliders"]
margin_top = 73.0
margin_right = 262.0
margin_bottom = 89.0
min_value = 1.0
max_value = 20.0
step = 0.2
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer/Sliders"]
margin_top = 93.0
margin_right = 262.0
margin_bottom = 107.0
text = "Hook Pull"

[node name="Hook Pull" type="HSlider" parent="CanvasLayer/Sliders"]
margin_top = 111.0
margin_right = 262.0
margin_bottom = 127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinCounter" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/CoinCounter"]
margin_right = 40.0
margin_bottom = 14.0
text = "0"
[connection signal="value_changed" from="CanvasLayer/Sliders/Hook Gravity" to="." method="_on_Hook_Gravity_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Sliders/Hook Speed" to="." method="_on_Hook_Speed_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Sliders/Hook Pull" to="." method="_on_Hook_Pull_value_changed"]
